# pdf-to-anki

./: .gitignore  README.md  main.py  pyproject.toml
