[tool.poetry]
name = "pdf-to-text"
version = "0.1.0"
description = ""
authors = ["Earl Hikky <earl.hikky91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
genanki = "^0.13.1"
pdfminer-six = "^20231228"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
